derive/test/compile_fail/record_as_seq_incomplete_labels.stderr
error: proc-macro derive panicked
 --> compile_fail/record_as_seq_incomplete_labels.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `label` on struct field
